--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,24 +1,25 @@
 .u-center-text{text-align: center !important;}
 .u-center-block{margin: 0 auto !important;}
 
-.u-margin-bottom-small{margin-bottom: 1rem !important;;}
-.u-margin-bottom-medium{margin-bottom: 4rem !important;;}
-.u-margin-bottom-big{margin-bottom: 8rem !important;;}
+.u-margin-bottom-small{margin-bottom: 1rem !important;}
+.u-margin-bottom-medium{margin-bottom: 4rem !important;}
+.u-margin-bottom-big{margin-bottom: 8rem !important;}
+.u-margin-bottom-huge{margin-bottom: 13rem !important;}
 
-.u-margin-top-small{margin-top: 1rem !important;;}
-.u-margin-top-medium{margin-top: 4rem !important;;}
-.u-margin-top-big{margin-top: 8rem !important;;}
-.u-margin-top-huge{margin-top: 10rem !important;;}
+.u-margin-top-small{margin-top: 1rem !important;}
+.u-margin-top-medium{margin-top: 4rem !important;}
+.u-margin-top-big{margin-top: 8rem !important;}
+.u-margin-top-huge{margin-top: 13rem !important;}
 
-.u-padding-top-small{padding-top: 1rem !important;;}
-.u-padding-top-medium{padding-top: 4rem !important;;}
-.u-padding-top-big{padding-top: 8rem !important;;}
-.u-padding-top-huge{padding-top: 10rem !important;;}
+.u-padding-top-small{padding-top: 1rem !important;}
+.u-padding-top-medium{padding-top: 4rem !important;}
+.u-padding-top-big{padding-top: 8rem !important;}
+.u-padding-top-huge{padding-top: 13rem !important;}
 
-.u-padding-bottom-small{padding-bottom: 1rem !important;;}
-.u-padding-bottom-medium{padding-bottom: 4rem !important;;}
-.u-padding-bottom-big{padding-bottom: 8rem !important;;}
-.u-padding-bottom-huge{padding-bottom: 10rem !important;;}
+.u-padding-bottom-small{padding-bottom: 1rem !important;}
+.u-padding-bottom-medium{padding-bottom: 4rem !important;}
+.u-padding-bottom-big{padding-bottom: 8rem !important;}
+.u-padding-bottom-huge{padding-bottom: 13rem !important;}
 
 .u-bold {font-weight: 700;}
 .u-text-left {text-align: left;}
