--- a/sass/component/_button.scss
+++ b/sass/component/_button.scss
@@ -104,7 +104,6 @@
         font-size: 2rem;
         font-weight: 600;
         letter-spacing: .3rem;
-        transition: $transition-medium;
         color: $color-primary-dark;
         border: 1px solid $color-primary-dark;
     }
