--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -15,7 +15,7 @@
     }
 
     &__title {
-        display: inline-block;
+        display: block;
         text-align: left;
         color: $color-primary-light;
         font-family: 'Permanent Marker', cursive;
